--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+@media print {
+  body {
+    font-family: Arial, sans-serif;
+    padding: 20px;
+  }
+
+  .print-container {
+    width: 100%;
+  }
+
+  .print-title {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .print-course {
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  .print-course-title {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .print-course-description,
+  .print-course-instructor,
+  .print-course-categories {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+}
+
 .bg-auth {
   background: url('../public/bg-auth.jpg');
   background-repeat: no-repeat;
@@ -37,4 +73,17 @@
   60% {
     transform: translate3d(4px, 0, 0);
   }
+}
+
+.btn-hover-effect {
+  display: flex;
+  align-items: center;
+}
+
+.btn-hover-effect .arrow-icon {
+  transition: transform 0.3s ease;
+}
+
+.btn-hover-effect:hover .arrow-icon {
+  transform: translateX(-5px); /* Adjust the value as needed */
 }
